--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,124 @@
-test
+/* -------------------------------------------------------------------------------------------------------------- */
+/* BASIC SETUP--------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------------- */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  background-color: #2c3034;
+  color: #faf0bf;
+  font-family: "Bangers", cursive, Arial;
+  font-weight: 400;
+  font-size: 20px;
+  text-rendering: optimizeLegibility;
+}
+
+/* -------------------------------------------------------------------------------------------------------------- */
+/* REUSABLE COMPONENTS------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------------- */
+
+.row {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+section {
+  padding: 80px 0;
+}
+
+.box {
+  padding: 1%;
+}
+
+/* -------------------------------------------------------------------------------------------------------------- */
+/* HEADINGS           ------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------------- */
+
+h1,
+h2,
+h3 {
+  font-weight: 300;
+}
+
+h1 {
+  margin: 0;
+  margin-bottom: 20px;
+  color: #fff;
+  font-size: 200%;
+  word-spacing: 4px;
+  letter-spacing: 1px;
+}
+
+h2 {
+  font-size: 180%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+}
+
+h3 {
+  font-size: 110%;
+  margin-bottom: 15px;
+}
+
+h2:after {
+  display: block;
+  height: 2px;
+  background-color: floralwhite;
+  content: " ";
+  width: 100px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+/* -------------------------------------------------------------------------------------------------------------- */
+/* Paragraph--------------------------------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------------------------------------------- */
+
+.long-copy {
+  line-height: 145%;
+  width: 70%;
+  margin-left: 15%;
+}
+
+/* Christian TEMP */
+.main-movie-box {
+  width: 300px;
+  height: 40px;
+  background-color: #404b56;
+  padding: 10px;
+  margin: 5px;
+
+  text-align: center;
+
+  transition-property: width, height;
+  transition-duration: 0.5s, 0.5s;
+  transition-timing-function: ease-in;
+  transition-delay: 0s, 0s;
+}
+
+.main-movie-box:hover {
+  background-color: #404b56;
+  width: 100%;
+  height: 200px;
+}
+
+.main-movie-content {
+  display: grid;
+}
+
+.main-movie-content:hover {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 20% 20% 20% 20% 20%;
+}
+
+.main-movie-content:hover p {
+  grid-column-start: 1;
+}
